/***********************************************************************
X3 ChangeLog

2009-05-30  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/chanserv.c: Fixed a crash with setting a .set option with an invalid
	option.

	* src/mail-smtp.c: Added missing file.

2009-05-27  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* Major update to bring X3 in line with the latest SRVX commit.  Please see
	UPGRADE. Credits go to the SRVX team.

2009-04-22  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/proto-p10.c: Ignore stats headers.

2009-05-08  Henrik Stuart  <evilnet@hstuart.dk>

	* src/mod-python.c: generalised cmd_run to process file_input productions.

2009-05-06  Henrik Stuart  <evilnet@hstuart.dk>

	* src/mod-python.c: generalised PYTHONPATH environment setting to
	not explicitly set Alex's home directory.

2009-05-05  Henrik Stuart  <evilnet@hstuart.dk>

	* src/proto-p10.c: introduced irc_sno for SNO messages. Removed broken
	auto_oper on LOC support.

	* src/proto.h: introduced irc_sno for SNO messages.

	* src/nickserv.c: added registered authentication function to handle
	auto_oper on LOC.

2009-05-04  Alex Schumann  <rubin@afternet.org>

        * src/chanserv.c: julien and polo noticed a crash during channel register. Fixed

        * x3.conf.example: fix typeo in default channel regex. Thanks again to julien for noticing this.

2009-03-27  Neil Spierling  <sirvulcan@sirvulcan.co.nz>

	* src/proto-p10.c: Update PRIV handling code for the latest
	nefarious 1.3 changes.

2009-02-27  Alex Schumann  <rubin@afternet.org>

	* src/proto-p10.c: Patch from muer to support auto-oper for LOC
	connections too.

2009-01-31  Alex Schumann  <rubin@afternet.org>

	* src/chanserv.c: change server link handlers to return an int

	* src/hash.h: change server link handlers to return an int

	* src/plugins/annoy/plugin.py: add some debug code for testing new
	hooks

	* src/modpython.py: support for new hooks server_link, nick_change,
	and new_user
