@@ -3,6 +3,13 @@ X3 ChangeLog
 
 2009-05-30  Neil Spierling  <sirvulcan@sirvulcan.co.nz>
 
+	* src/hash.c: Couple of tweaks.
+
+	* src/proto-common.c: Fix for triggers not working with forwards as well as
+	off channel services.
+
+2009-05-30  Neil Spierling  <sirvulcan@sirvulcan.co.nz>
+
 	* src/chanserv.c: Fixed a crash with setting a .set option with an invalid
 	option.
 
